--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,11 @@ services:
 ###
 env:
   matrix:
+    - VERSION=1
+    - VERSION=2
+    - VERSION=3
+    - VERSION=4
+    - VERSION=5
     - VERSION=latest
 
 
