--- a/.github/workflows/params.yml
+++ b/.github/workflows/params.yml
@@ -16,7 +16,7 @@ env:
         "NAME":    "el",
         "VERSION": ["latest", "8", "7", "6", "5", "4", "3", "2", "1"],
         "FLAVOUR": ["alpine", "latest"],
-        "ARCH":    ["linux/amd64", "linux/386", "linux/arm64", "linux/arm/v7", "linux/arm/v6"]
+        "ARCH":    ["linux/amd64", "linux/386", "linux/arm64", "linux/arm/v7", "linux/arm/v6", "linux/ppc64le", "linux/s390x"]
       }
     ]
 
