--- a/Dockerfiles/Dockerfile.latest
+++ b/Dockerfiles/Dockerfile.latest
@@ -1,4 +1,4 @@
-FROM alpine:latest as builder
+FROM alpine:3.16 as builder
 
 RUN set -eux \
 	&& apk add --no-cache \
@@ -42,7 +42,7 @@ RUN set -eux \
 	&& find /usr/local/lib/node_modules -type f -iname '*.ts' -exec rm {} \; \
 	&& find /usr/local/lib/node_modules -type f -iname '*.yml' -exec rm {} \;
 
-FROM alpine:latest
+FROM alpine:3.16
 LABEL \
 	maintainer="cytopia <cytopia@everythingcli.org>" \
 	repo="https://github.com/cytopia/docker-eslint"
